  * The new xml format with schema is now the default. Use configure option
    "--disable-xml", or add -D__OLDXML to MANUAL_FLAGS in make.inc, to revert
    to the old xml format. IMPORTANT NOTICE: the format is incompatibile both
    with the "old" format and with the previous "new" one: files may be in
    different locations with different names and contain different data.
  * Hybrid functionals: ACE is now the default for scf calculations (it wasn't
    in 6.1 contrary to what previously stated in this file); it is disabled
    for TD-DFPT. See variable "use_ace".

New in 6.1 version:

  * Hybrid functionals: Band parallelization over pair of bands, contributed
    by Taylor Barnes et al, http://dx.doi.org/10.1016/j.cpc.2017.01.008
  * Hybrid functionals with PAW now work
  * Optimized tetrahedron method, contributed by Mitsuaki Kawamura, U. Tokyo
  * PostProcessing: pp.x can now plot many bands in a single run.
    Contributed by Leopold Talirz, U. York

Incompatible changes in 6.1 version:

  * Routine h_psiq deleted, replaced by h_psi
  * Many variables related to tetrahedron method moved around
  * Functions set_sym and find_sym no longer require FFT grid dimensions as 
    input arguments, no longer force consistency of symmetries with FFT grids

Fixed in 6.1 version

  * TDDFPT: the keyword ltammd was missing in the namelist lr_dav
  * PW: real instead of complex constants in two ZGEMM calls could lead
        to NaN's in DFT_U forces with some compilers (e.g. PGI) (r13289)
  * pwi2xsf utility, also used in XCrysDen: various fixes (r13197)
  * PP: incorrect results in "projwfc.x" with PAW projection due to a 
        missing line (r13121); crash in pw_export.x" due to dumb error (r13189)
  * PW: final scf step in variable-cell calculation could crash
        due to missing reset of FFT dimensions (r13116)
  * FD: dangerous "q==0" check in matdyn.f90 (r13109)
  * Misc errors in new schema-based xml I/O (r13110, r13113)